Upgrade packages to latest versions

--- a/package.json
+++ b/package.json
@@ -38,51 +38,44 @@
   ],
   "engineStrict": false,
   "engines": {
-    "npm": "^2.14.7",
-    "node": ">=8"
+    "node": ">=14"
   },
   "dependencies": {
-    "deep-equal": "1.0.1",
-    "predicate": "1.2.0",
+    "deep-equal": "2.0.5",
+    "predicate": "2.0.0",
     "selectn": "1.1.2"
   },
   "devDependencies": {
-    "atob": "^2.0.3",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^20.0.3",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "codemirror": "^5.29.0",
-    "coveralls": "^2.13.1",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.6.1",
-    "eslint-plugin-jest": "^20.0.3",
-    "eslint-plugin-react": "^7.3.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "exit-hook": "^1.1.1",
-    "express": "^4.15.4",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "gh-pages": "^1.0.0",
-    "has-flag": "^2.0.0",
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.7",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/register": "^7.17.7",
+    "atob": "^2.1.2",
+    "codemirror": "^5.65.2",
+    "coveralls": "^3.1.1",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.11.0",
+    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-react": "^7.29.4",
+    "exit-hook": "^3.0.0",
+    "express": "^4.17.3",
+    "gh-pages": "^3.2.3",
+    "has-flag": "^5.0.1",
     "html": "1.0.0",
-    "husky": "^0.14.3",
-    "jest": "^20.0.4",
-    "jsdom": "^11.2.0",
-    "lint-staged": "^4.1.0",
-    "prettier": "^1.6.1",
-    "regenerator-runtime": "^0.11.0",
-    "rimraf": "^2.6.1",
-    "sinon": "^3.2.1",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.5.5"
+    "jest": "^27.5.1",
+    "jsdom": "^19.0.0",
+    "lint-staged": "^12.3.6",
+    "mini-css-extract-plugin": "^2.6.0",
+    "prettier": "^2.6.0",
+    "regenerator-runtime": "^0.13.9",
+    "rimraf": "^3.0.2",
+    "sinon": "^13.0.1",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.6.2",
+    "webpack": "^5.70.0"
   },
   "directories": {
     "test": "test"
