--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,4 @@
 {
-  "presets": ["react", "es2015"],
-  "plugins": [
-    "transform-class-properties"
-  ]
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
