--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 sudo: false
-language:
-- node_js
+language: node_js
 node_js:
-- "8"
+  - '14'
 script:
-- npm run lint
-- npm run dist
-- npm test && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+  - npm run lint
+  - npm run dist
+  - npm test && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
