--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "mavarazy@gmail.com",
   "scripts": {
     "build:lib": "rimraf lib && cross-env NODE_ENV=production babel -d lib/ src/",
-    "build:dist": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack.config.dist.js --optimize-minimize",
+    "build:dist": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack.config.dist.js --mode production",
     "cs-check": "prettier -l $npm_package_prettierOptions '{src,test}/**/*.js'",
     "cs-format": "prettier $npm_package_prettierOptions '{src,test}/**/*.js' --write",
     "dist": "npm run build:lib && npm run build:dist",
@@ -53,6 +53,7 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/register": "^7.17.7",
     "atob": "^2.1.2",
+    "babel-loader": "^8.2.3",
     "codemirror": "^5.65.2",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
@@ -75,7 +76,8 @@
     "sinon": "^13.0.1",
     "style-loader": "^3.3.1",
     "typescript": "^4.6.2",
-    "webpack": "^5.70.0"
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   },
   "directories": {
     "test": "test"
