--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "json-rules-engine-simplified",
+  "name": "@waylit/json-rules-engine-simplified",
   "version": "0.1.18",
   "description": "Simpl JSON rules engine",
   "private": false,
-  "author": "mavarazy@gmail.com",
+  "author": "satya@waylit.com",
   "scripts": {
     "build:lib": "rimraf lib && cross-env NODE_ENV=production babel -d lib/ src/",
     "build:dist": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack.config.dist.js --mode production",
