--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x]
+        node-version: ['14', '16']
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -40,3 +40,29 @@ jobs:
           run_install: true
       - run: pnpm dist
       - run: pnpm test
+      - run: pnpm version prerelease --preid=ci-$GITHUB_RUN_ID --no-git-tag-version
+      - run: pnpm pack
+      - name: Upload
+        uses: actions/upload-artifact@v2
+        with:
+          name: package
+          path: '*.tgz'
+  publish:
+    name: 'Publish to GitHub Packages'
+    needs: [build]
+    runs-on: ubuntu-latest
+    if: github.repository_owner == 'WayLit'
+    steps:
+      - name: Upload
+        uses: actions/download-artifact@v2
+        with:
+          name: package
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+          registry-url: https://npm.pkg.github.com/
+          scope: '@waylit'
+      - run: echo "registry=https://npm.pkg.github.com/@waylit" >> .npmrc
+      - run: npm publish $(ls *.tgz)
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
