--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@waylit/json-rules-engine-simplified",
   "version": "0.1.18",
-  "description": "Simpl JSON rules engine",
+  "description": "Simple JSON rules engine",
   "private": false,
   "author": "satya@waylit.com",
   "scripts": {
@@ -9,10 +9,10 @@
     "build:dist": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack.config.dist.js --mode production",
     "cs-check": "prettier -l $npm_package_prettierOptions '{src,test}/**/*.js'",
     "cs-format": "prettier $npm_package_prettierOptions '{src,test}/**/*.js' --write",
-    "dist": "npm run build:lib && npm run build:dist",
+    "dist": "pnpm run build:lib && pnpm run build:dist",
     "lint": "eslint src test",
     "precommit": "lint-staged",
-    "publish-to-npm": "npm run dist && npm publish && npm version patch",
+    "publish-to-npm": "pnpm run dist && pnpm publish && pnpm version patch",
     "tdd": "jest --watchAll",
     "test": "jest --coverage"
   },
@@ -26,8 +26,8 @@
   },
   "lint-staged": {
     "{src,test}/**/*.js": [
-      "npm run lint",
-      "npm run cs-format",
+      "pnpm run lint",
+      "pnpm run cs-format",
       "git add"
     ]
   },
@@ -47,13 +47,18 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.7",
+    "@babel/core": "^7.17.8",
     "@babel/eslint-parser": "^7.17.0",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@babel/register": "^7.17.7",
+    "@types/jest": "^27.4.1",
+    "@types/json-schema": "^7.0.10",
+    "@types/selectn": "^1.1.0",
     "atob": "^2.1.2",
-    "babel-loader": "^8.2.3",
+    "babel-loader": "^8.2.4",
     "codemirror": "^5.65.2",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
@@ -62,7 +67,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-jest": "^26.1.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
@@ -74,13 +79,15 @@
     "html": "1.0.0",
     "jest": "^27.5.1",
     "jsdom": "^19.0.0",
-    "lint-staged": "^12.3.6",
+    "lint-staged": "^12.3.7",
     "mini-css-extract-plugin": "^2.6.0",
     "prettier": "^2.6.0",
     "regenerator-runtime": "^0.13.9",
     "rimraf": "^3.0.2",
     "sinon": "^13.0.1",
     "style-loader": "^3.3.1",
+    "ts-jest": "^27.1.4",
+    "ts-loader": "^9.2.8",
     "typescript": "^4.6.2",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
