--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": false,
   "author": "satya@waylit.com",
   "scripts": {
-    "build:lib": "rimraf lib && cross-env NODE_ENV=production babel -d lib/ src/",
+    "build:lib": "rimraf lib && cross-env NODE_ENV=production tsc -p tsconfig.json --outDir lib",
     "build:dist": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack.config.dist.js --mode production",
     "cs-check": "prettier -l $npm_package_prettierOptions '{src,test}/**/*.js'",
     "cs-format": "prettier $npm_package_prettierOptions '{src,test}/**/*.js' --write",
@@ -55,7 +55,7 @@
     "@babel/preset-typescript": "^7.16.7",
     "@babel/register": "^7.17.7",
     "@types/jest": "^27.4.1",
-    "@types/json-schema": "^7.0.10",
+    "@types/json-schema": "^7.0.11",
     "@types/selectn": "^1.1.0",
     "atob": "^2.1.2",
     "babel-loader": "^8.2.4",
@@ -63,11 +63,11 @@
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
-    "eslint": "^8.11.0",
+    "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.2",
+    "eslint-plugin-jest": "^26.1.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
@@ -81,14 +81,14 @@
     "jsdom": "^19.0.0",
     "lint-staged": "^12.3.7",
     "mini-css-extract-plugin": "^2.6.0",
-    "prettier": "^2.6.0",
+    "prettier": "^2.6.1",
     "regenerator-runtime": "^0.13.9",
     "rimraf": "^3.0.2",
     "sinon": "^13.0.1",
     "style-loader": "^3.3.1",
     "ts-jest": "^27.1.4",
     "ts-loader": "^9.2.8",
-    "typescript": "^4.6.2",
+    "typescript": "^4.6.3",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
   },
