--- a/.babelrc
+++ b/.babelrc
@@ -7,5 +7,6 @@
   "plugins": [
     "@babel/plugin-transform-typescript",
     "@babel/plugin-proposal-class-properties"
-  ]
+  ],
+  "sourceMaps": "both"
 }
