--- a/package.json
+++ b/package.json
@@ -42,54 +42,58 @@
   },
   "dependencies": {
     "deep-equal": "2.0.5",
+    "json-logic-js": "^2.0.2",
     "predicate": "2.0.0",
     "selectn": "1.1.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.8",
-    "@babel/eslint-parser": "^7.17.0",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.2",
+    "@babel/eslint-parser": "^7.18.2",
+    "@babel/plugin-proposal-class-properties": "^7.17.12",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@babel/preset-typescript": "^7.17.12",
     "@babel/register": "^7.17.7",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^28.1.1",
+    "@types/json-logic-js": "^2.0.1",
     "@types/json-schema": "^7.0.11",
     "@types/selectn": "^1.1.0",
     "atob": "^2.1.2",
-    "babel-loader": "^8.2.4",
-    "codemirror": "^5.65.2",
+    "babel-loader": "^8.2.5",
+    "codemirror": "^5.65.5",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
-    "eslint": "^8.12.0",
+    "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.3",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-n": "^15.2.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react": "^7.30.0",
     "exit-hook": "^3.0.0",
-    "express": "^4.17.3",
-    "gh-pages": "^3.2.3",
+    "express": "^4.18.1",
+    "gh-pages": "^4.0.0",
     "has-flag": "^5.0.1",
     "html": "1.0.0",
-    "jest": "^27.5.1",
+    "jest": "^28.1.1",
     "jsdom": "^19.0.0",
-    "lint-staged": "^12.3.7",
+    "json-schema-typed": "^8.0.1",
+    "lint-staged": "^13.0.0",
     "mini-css-extract-plugin": "^2.6.0",
-    "prettier": "^2.6.1",
+    "prettier": "^2.6.2",
     "regenerator-runtime": "^0.13.9",
     "rimraf": "^3.0.2",
-    "sinon": "^13.0.1",
+    "sinon": "^14.0.0",
     "style-loader": "^3.3.1",
-    "ts-jest": "^27.1.4",
-    "ts-loader": "^9.2.8",
-    "typescript": "^4.6.3",
-    "webpack": "^5.70.0",
+    "ts-jest": "^28.0.4",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.7.3",
+    "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2"
   },
   "directories": {
